[package]
name = "mqtt-sn"
version = "0.1.0"
authors = ["Erik Henriksson <erikhenrikssn@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/henrikssn/rust-mqtt-sn"

[dependencies]
bitfield = "0.13.2"
heapless = "0.5.6"
byte = "0.2.4"

[dev-dependencies]
assert_hex = "*"
