[package]
name = "mqtt-sn"
version = "0.2.1"
authors = ["Erik Henriksson <erikhenrikssn@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Partial Rust implementation of the MQTT-SN standard"
repository = "https://github.com/rust-iot/rust-mqtt-sn"
exclude = [
    ".github/*",
    ".gitignore",
]

[dependencies]
bitfield = "0.14"
heapless = "0.7.7"
byte = "0.2"
defmt = { version = "0.3", optional = true }

[features]
defmt-impl = ["defmt", "heapless/defmt-impl"]

[dev-dependencies]
assert_hex = "0.2"
